delete-recipe
