# src/routers/recipes.js
@@ -19,6 +19,7 @@ import { upload } from '../middlewares/multer.js';
 import { isValidId } from '../middlewares/isValidId.js';
 import { validateBody } from '../middlewares/validateBody.js';
 import { authenticate } from '../middlewares/authenticate.js';
+import { deleteOwnRecipeController } from '../controllers/recipes.js';
 
 const router = express.Router();
 
@@ -49,6 +50,13 @@ router.get(
   '/favorites',
   authenticate,
   ctrlWrapper(getFavoriteRecipesController),
+);
+
+router.delete(
+  '/:recipeId',
+  authenticate,
+  isValidId,
+  ctrlWrapper(deleteOwnRecipeController),
 );
 
 export default router;
